# EEG

./: CMakeLists.txt
include/: FFT.hpp
src/: main.cpp
